# mgm_ros

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
cfg/: Config.cfg
include/mgm_ros/: MGMNodelet.h
launch/: downsample_mgm_disparity.launch  mgm_ros.launch
params/: disparity_config.yaml
src/: MGMNodelet.cpp
