<?xml version="1.0"?>
<package format="2">
  <name>mgm_ros</name>
  <version>0.0.0</version>
  <description>PLACEHOLDER</description>

  <author email="methyldragon@gmail.com">methylDragon</author>
  <maintainer email="methyldragon@gmail.com">methylDragon</maintainer>
  <url type="website">http://github.com/methylDragon</url>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>mgm</build_depend>
  <exec_depend>mgm</exec_depend>  

  <build_depend>image_transport</build_depend>
  <exec_depend>image_transport</exec_depend>  

  <build_depend>message_filters</build_depend>
  <exec_depend>message_filters</exec_depend>  

  <build_depend>image_geometry</build_depend>
  <exec_depend>image_geometry</exec_depend>  

  <build_depend>image_proc</build_depend>
  <exec_depend>image_proc</exec_depend>  

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>  

  <build_depend>stereo_msgs</build_depend>
  <exec_depend>stereo_msgs</exec_depend>  

  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>  

  <build_depend>dynamic_reconfigure</build_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <build_depend>nodelet</build_depend>
  <exec_depend>nodelet</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
